# rl-lang

./: .all-contributorsrc  .gitignore  .gitmodules  AI_POLICY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE.md  LICENSE.md  README.md  SECURITY.md  VERSIONING.md  notes.md  syntax.rl  test.rl
crates/rl-benches/: Cargo.toml  readme.md
crates/rl-benches/benches/: lexer.rs  parser.rs  pipeline.rs
crates/rl-benches/src/: lib.rs
crates/rl-checker/: Cargo.toml  readme.md
crates/rl-checker/src/: lib.rs  structs.rs  types.rs  units.rs
crates/rl-checker/src/operators/: binary.rs  index_assign.rs  mod.rs  unary.rs
crates/rl-checker/src/scope/: assign.rs  call.rs  declare.rs  mod.rs
crates/rl-checker/src/statements/: expression.rs  mod.rs  statement.rs
crates/rl-cli/: Cargo.toml  readme.md
crates/rl-cli/src/: logic_loops.rs  main.rs
crates/rl-cranelift/: Cargo.toml  readme.md
crates/rl-cranelift/src/: lib.rs
crates/rl-docs/: Cargo.toml  readme.md
crates/rl-docs/src/: entry.rs  lib.rs
crates/rl-docs/src/entries/: mod.rs
crates/rl-docs/src/entries/stdlib/: mod.rs
crates/rl-docs/src/entries/tutorial/: mod.rs
crates/rl-docs/src/tui/: formatting.rs  main_loop.rs  mod.rs  types.rs  utils.rs
crates/rl-interpreter/: Cargo.toml  readme.md
crates/rl-interpreter/src/: evaluator.rs  native.rs  scopes.rs  values.rs
crates/rl-interpreter/src/evaluator_types/: addressing.rs  index_assign.rs  mod.rs
crates/rl-interpreter/src/stdlib/: common.rs  len.rs  mod.rs
crates/rl-interpreter/src/stdlib/array/: arr_all.rs  arr_any.rs  arr_concat.rs  arr_contains.rs  arr_count.rs  arr_fill.rs  arr_filter.rs  arr_find.rs  arr_find_index.rs  arr_first.rs  arr_flat_map.rs  arr_flatten.rs  arr_for_each.rs  arr_index_of.rs  arr_insert.rs  arr_is_empty.rs  arr_last.rs  arr_map.rs  arr_max.rs  arr_min.rs  arr_pop.rs  arr_product.rs  arr_push.rs  arr_range.rs  arr_reduce.rs  arr_remove.rs  arr_reverse.rs  arr_slice.rs  arr_sort.rs  arr_sort_by.rs  arr_sum.rs  arr_unique.rs  arr_zip.rs  mod.rs
crates/rl-interpreter/src/stdlib/bitwise/: bit_and.rs  bit_not.rs  bit_or.rs  bit_shift_left.rs  bit_shift_right.rs  bit_xor.rs  count_bits.rs  leading_zeros.rs  mod.rs  trailing_zeros.rs
crates/rl-interpreter/src/stdlib/collections/: map_clear.rs  map_contains.rs  map_get.rs  map_is_empty.rs  map_keys.rs  map_len.rs  map_merge.rs  map_remove.rs  map_to_array.rs  map_values.rs  mod.rs  set_add.rs  set_is_empty.rs  set_remove.rs  set_to_array.rs
crates/rl-interpreter/src/stdlib/debug/: assert.rs  assert_approx_eq.rs  assert_eq.rs  assert_ge.rs  assert_gt.rs  assert_le.rs  assert_lt.rs  assert_ne.rs  bench.rs  common.rs  dbg.rs  mod.rs  panic.rs  todo.rs  type_of.rs  unreachable.rs
crates/rl-interpreter/src/stdlib/fs/: copy_file.rs  file_modified.rs  file_size.rs  list_dir.rs  mkdir.rs  mkdir_all.rs  mod.rs  move_file.rs  rename_file.rs  rmdir.rs  rmdir_all.rs  temp_dir.rs
crates/rl-interpreter/src/stdlib/http/: common.rs  http_get.rs  http_post.rs  http_request.rs  http_request_body.rs  http_request_header.rs  http_request_method.rs  http_request_url.rs  http_respond.rs  http_server_recv.rs  http_server_start.rs  http_server_stop.rs  http_server_try_recv.rs  mod.rs
crates/rl-interpreter/src/stdlib/io/: append_file.rs  delete_file.rs  eprint.rs  input.rs  mod.rs  print.rs  println.rs  read_bytes.rs  read_file.rs  read_lines.rs  write_file.rs
crates/rl-interpreter/src/stdlib/math/: abs.rs  acos.rs  asin.rs  atan.rs  atan2.rs  ceil.rs  clamp.rs  cos.rs  degrees.rs  exp.rs  factorial.rs  fibonacci.rs  floor.rs  gcd.rs  hypot.rs  is_prime.rs  lcm.rs  lerp.rs  log.rs  (+14 more)
crates/rl-interpreter/src/utils/: binary.rs  mod.rs  statements.rs  unary.rs
crates/rl-lexer/: Cargo.toml  readme.md
crates/rl-lexer/src/: lib.rs  scanner.rs  tokenizer.rs  tokentypes.rs
crates/rl-lexer/src/types/: character_literal.rs  identifier.rs  mod.rs  number_literal.rs  string_literal.rs
crates/rl-lexer/src/utils/: helper.rs  mod.rs
crates/rl-lsp/: Cargo.toml  readme.md
crates/rl-lsp/src/: backend.rs  goto_definition.rs  hover.rs  lib.rs  pipeline.rs  references.rs  refernces.rs  rename.rs  to_diagnostic.rs
crates/rl-parser/: Cargo.toml  readme.md
crates/rl-parser/src/: parser_logic.rs
crates/rl-parser/src/expressions/: comparsion.rs  equality.rs  factor.rs  logical.rs  mod.rs  postfix.rs  primary.rs  struct_literal.rs  term.rs  unary.rs
crates/rl-parser/src/statements/: const_declaration.rs  for_statement.rs  function_declaration.rs  if_statement.rs  impl_block.rs  import_statement.rs  infer_declaration.rs  match_statement.rs  mod.rs  record_declaration.rs  tag_declaration.rs  variable_declaration.rs  while_statement.rs
crates/rl-parser/src/utils/: mod.rs  parse_type.rs  parse_unit.rs
crates/rl-repl/: Cargo.toml  readme.md
crates/rl-repl/src/: command_handler.rs  depth_checker.rs  input_eval.rs  logic_loop.rs  output_render.rs  syntax_highlighting.rs  utils.rs
crates/rl-resolver/: Cargo.toml  readme.md
crates/rl-resolver/src/: expressions.rs  lib.rs  statements.rs
crates/rl-tests/: Cargo.toml  readme.md
crates/rl-tests/tests/: tests.rs
crates/rl-tests/tests/checker/: units.rs
crates/rl-tests/tests/common/: mod.rs
crates/rl-tests/tests/commons/: mod.rs
crates/rl-tests/tests/interpreter/: mod.rs  records.rs
crates/rl-tests/tests/lexer/: declarations.rs  keywords.rs  literals.rs
crates/rl-tests/tests/parser/: declarations.rs  flow_for.rs  flow_if.rs  flow_while.rs  fns_lambdas.rs  imports.rs  match.rs  postfix.rs
crates/rl-tests/tests/vm/: impl.rs  mod.rs  numbers.rs
crates/rl-tooling/: Cargo.toml  readme.md
crates/rl-tooling/assets/: rl-highlight.js  style.css
crates/rl-tooling/src/: dev.rs  format.rs  generate_docs.rs  lib.rs  new.rs  package.rs
crates/rl-utils/: Cargo.toml  readme.md
crates/rl-utils/src/: errors.rs  lib.rs  line_index.rs  span.rs
crates/rl-vm/: Cargo.toml  readme.md
crates/rl-vm/src/: bytecode.rs  chunk.rs  compiler.rs  lib.rs  native.rs  values.rs  vm_logic.rs
crates/rl-vm/src/stdlib/: common.rs  macros.rs  mod.rs
(+1194 files in other folders)
