[package]
name = "rl-lang"
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A simple interpreted programming language"
repository = "https://github.com/rl-lang/rl-lang"
readme = "README.md"
keywords = ["language", "interpreter", "cli"]
categories = ["command-line-utilities"]

[dependencies]
log = { version = "0.4", optional = true }
env_logger = { version = "0.11" , optional = true }
ariadne = "0.5"
ratatui = { version = "0.29", optional = true }
crossterm = "0.28"
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["full"] , optional = true }
serde_json = "1"
clap = { version = "4.6.1", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
tiny_http = "0.12"
ureq = "2"
cranelift-jit = { version = "0.116", optional = true}
cranelift-module = { version = "0.116", optional = true}
cranelift-codegen = { version = "0.116", optional = true}
cranelift-frontend = { version = "0.116", optional = true}
target-lexicon = { version = "0.12", optional = true}

[dev-dependencies]
criterion = "0.5"

[features]
default = ["repl", "repl_tui", "run", "eval", "cranelift"]
run = []
repl = []
repl_tui = ["dep:ratatui"]
debug = ["dep:env_logger", "dep:log"]
eval = []
vm = []
cranelift = ["dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-codegen", "dep:cranelift-frontend", "dep:target-lexicon"]
lsp = ["dep:tower-lsp", "dep:tokio"]


[[bench]]
name = "v0_1_4"
harness = false

[[bin]]
name = "rl"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
debug = true
