[workspace]
resolver = "2"
members = [
    "crates/rl-utils",
    "crates/rl-lexer",
    "crates/rl-ast",
    "crates/rl-parser",
    "crates/rl-resolver",
    "crates/rl-vm",
    "crates/rl-cranelift",
    "crates/rl-interpreter",
    "crates/rl-checker",
    "crates/rl-docs",
    "crates/rl-tooling",
    "crates/rl-repl",
    "crates/rl-lsp",
    "crates/rl-cli",
    "crates/rl-commons",
    "crates/rl-tests",
    "crates/rl-benches",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rl-lang/rl-lang"

[workspace.dependencies]
rl-commons = { path = "crates/rl-commons", version = "0.2.2" }
rl-utils = { path = "crates/rl-utils", version = "0.2.2" }
rl-lexer = { path = "crates/rl-lexer", version = "0.2.2" }
rl-ast = { path = "crates/rl-ast", version = "0.3.2" }
rl-parser = { path = "crates/rl-parser", version = "0.3.2" }
rl-resolver = { path = "crates/rl-resolver", version = "0.2.2" }
rl-vm = { path = "crates/rl-vm", version = "0.2.2" }
rl-cranelift = { path = "crates/rl-cranelift", version = "0.2.2" }
rl-interpreter = { path = "crates/rl-interpreter", version = "0.3.2" }
rl-checker = { path = "crates/rl-checker", version = "0.3.2" }
rl-docs = { path = "crates/rl-docs", version = "0.2.2" }
rl-tooling = { path = "crates/rl-tooling", version = "0.2.2" }
rl-repl = { path = "crates/rl-repl", version = "0.2.2" }
rl-lsp = { path = "crates/rl-lsp", version = "0.2.2" }

criterion = { version = "0.5", features = ["html_reports"] }
ariadne = "0.5"
crossterm = "0.28"
ratatui = "0.29"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tiny_http = "0.12"
ureq = "2"
clap = { version = "4.6.1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
cranelift-jit = "0.116"
cranelift-module = "0.116"
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
target-lexicon = "0.13"
zstd = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
