[package]
name = "rl-checker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Static type checker for the rl-lang programming language"
repository.workspace = true

[dependencies]
rl-ast.workspace = true
rl-docs.workspace = true
rl-commons.workspace = true
rl-lexer.workspace = true
rl-parser.workspace = true
rl-utils.workspace = true
