[package]
name = "rl-cranelift"
version = "0.2.2"
readme = "readme.md"
edition.workspace = true
license.workspace = true
description = "Cranelift-based JIT compiler backend for the rl-lang programming language"
repository.workspace = true

[dependencies]
rl-vm.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
target-lexicon.workspace = true
