[package]
name = "rl-docs"
version.workspace = true
readme = "readme.md"
edition.workspace = true
license.workspace = true
description = "Documentation generation tooling for the rl-lang programming language"
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
ratatui = { workspace = true, optional = true, features = ["unstable-rendered-line-info"]}
crossterm = { workspace = true, optional = true }
rl-lexer = { workspace = true, optional = true }
rl-utils = { workspace = true, optional = true }

[features]
tui = ["dep:ratatui", "dep:crossterm", "dep:rl-lexer", "dep:rl-utils"]
