[package]
name = "rl-lexer"
version = "0.2.2"
readme = "readme.md"
edition.workspace = true
license.workspace = true
description = "Lexer and tokenizer for the rl-lang programming language"
repository.workspace = true

[dependencies]
rl-utils.workspace = true
log = { workspace = true, optional = true }

[features]
debug = ["dep:log"]
