[package]
name = "rl-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language Server Protocol implementation for the rl-lang programming language"
repository.workspace = true

[dependencies]
rl-lexer.workspace = true
rl-utils.workspace = true
rl-checker.workspace = true
rl-parser.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
