[package]
name = "rl-parser"
version = "0.3.2"
readme = "readme.md"
edition.workspace = true
license.workspace = true
description = "Parser for the rl-lang programming language"
repository.workspace = true

[dependencies]
rl-ast.workspace = true
rl-lexer.workspace = true
rl-utils.workspace = true
log = { workspace = true, optional = true }

[features]
debug = ["dep:log"]
