[package]
name = "rl-repl"
version = "0.2.2"
readme = "readme.md"
edition.workspace = true
license.workspace = true
description = "Interactive REPL for the rl-lang programming language"
repository.workspace = true

[dependencies]
rl-ast.workspace = true
rl-docs.workspace = true
rl-interpreter.workspace = true
rl-parser.workspace = true
rl-lexer.workspace = true
rl-utils.workspace = true
crossterm.workspace = true
ratatui.workspace = true
