[package]
name = "rl-resolver"
version = "0.2.1"
edition.workspace = true
license.workspace = true
description = "Name and import resolution for the rl-lang programming language"
repository.workspace = true

[dependencies]
rl-ast.workspace = true
rl-parser.workspace = true
rl-lexer.workspace = true
rl-utils.workspace = true
