[package]
name = "rl-tests"
version.workspace = true
readme = "readme.md"
edition.workspace = true
publish = false

[dev-dependencies]
rl-ast.workspace = true
rl-checker.workspace = true
rl-lexer.workspace = true
rl-parser.workspace = true
rl-interpreter.workspace = true
rl-utils.workspace = true
rl-vm.workspace = true
