[package]
name = "rl-tooling"
version = "0.2.2"
readme = "readme.md"
edition.workspace = true
license.workspace = true
description = "Developer tooling for the rl-lang toolchain"
repository.workspace = true

[dependencies]
rl-lexer.workspace = true
serde.workspace = true
toml.workspace = true
tiny_http.workspace = true
ureq.workspace = true
