[package]
name = "rl-utils"
version = "0.2.1"
edition.workspace = true
license.workspace = true
description = "Shared utility functions used across the rl-lang toolchain"
repository.workspace = true

[dependencies]
ariadne.workspace = true
log = { workspace = true, optional = true }

[features]
debug = ["dep:log"]
