[package]
name = "rl-utils"
version = "0.2.2"
readme = "readme.md"
edition.workspace = true
license.workspace = true
description = "Shared utility functions used across the rl-lang toolchain"
repository.workspace = true

[dependencies]
ariadne.workspace = true
log = { workspace = true, optional = true }

[features]
debug = ["dep:log"]
