[package]
name = "rl-vm"
version = "0.2.2"
readme = "readme.md"
edition.workspace = true
license.workspace = true
description = "Bytecode virtual machine for the rl-lang programming language"
repository.workspace = true

[dependencies]
rl-ast.workspace = true
rl-lexer.workspace = true
rl-utils.workspace = true
zstd.workspace = true
